objects/dupcheck__dcAudit__c.object
<CustomObject>
    <fields>
        <fullName>dupcheck__AuditDate__c</fullName>
        <label>Audit Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dupcheck__Data__c</fullName>
        <label>Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dupcheck__ObjectId__c</fullName>
        <externalId>true</externalId>
        <label>Object Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dupcheck__ObjectName__c</fullName>
        <label>Object Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dupcheck__Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dupcheck__Prefix__c</fullName>
        <label>Object Prefix</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dupcheck__RecordId__c</fullName>
        <label>Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dupcheck__RelatedIds__c</fullName>
        <label>Related Records Ids</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dupcheck__TypeString__c</fullName>
        <externalId>true</externalId>
        <label>Type String</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dupcheck__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Merge</fullName>
                </value>
                <value>
                    <fullName>Convert</fullName>
                </value>
                <value>
                    <fullName>Prevention</fullName>
                </value>
                <value>
                    <fullName>Direct</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dupcheck__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Duplicate_Check_Audits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>dupcheck__dcAudit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Duplicate Check Audit</label>
        <referenceTo>dupcheck__dcAudit__c</referenceTo>
        <relationshipLabel>Duplicate Check Audits</relationshipLabel>
        <relationshipName>Duplicate_Check_Audits</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Duplicate Check Audit</label>
    <nameField>
        <displayFormat>DC-AUDIT-{000000}</displayFormat>
        <label>Duplicate Check Audit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Duplicate Check Audits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>